<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spotify SDK Demo</string>
    <string name="authorize">🔓 Connect and Authorize</string>
    <string name="browse_content">Browse Content</string>
    <string name="connect">🔄 Connect</string>
    <string name="connect_switch_to_local">Switch to Local Playback</string>
    <string name="disconnect">⏏ Disconnect</string>
    <string name="echo">Echo</string>
    <string name="get_collection_state">ℹ️ Get Collection State</string>
    <string name="pause">⏸ Pause</string>
    <string name="play_alarm">Play an Alarm</string>
    <string name="play_album">Play an Album</string>
    <string name="play_artist">Play an Artist</string>
    <string name="play_playlist">Play a Playlist</string>
    <string name="play_track">Play Track</string>
    <string name="remove_uri">Remove from Collection</string>
    <string name="resume">▶️ Resume</string>
    <string name="save_uri">Save to Collection</string>
    <string name="seek_to">Seek to Position</string>
    <string name="set_repeat">🔁 Cycle Repeat Mode</string>
    <string name="set_shuffle">🔀 Toggle Shuffle</string>
    <string name="show_player_state">ℹ️ Get Player State</string>
    <string name="skip_next">⏭ Next</string>
    <string name="skip_previous">⏮ Previous</string>
    <string name="subscribe_to_capabilities">Get Capabilities</string>
    <string name="subscribe_to_current_track">Subscribe to Player State</string>
    <string name="subscribe_to_player_context">Subscribe to Context</string>
    <string name="title_activity_remote">SDK Remote</string>
</resources>
