<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:ignore="SmallSp,HardcodedText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Connect to Spotify"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3">
            <Button
                style="@style/SmallGridButton"
                android:id="@+id/authorize"
                android:onClick="onConnectAndAuthorizedClicked"
                android:text="Connect and Authorize" />
            <Button
                style="@style/SmallGridButton"
                android:id="@+id/connect"
                android:onClick="onConnectClicked"
                android:text="@string/connect" />
            <Button
                style="@style/SmallGridButton"
                android:id="@+id/disconnect"
                android:onClick="onDisconnectClicked"
                android:text="@string/disconnect" />
        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Play Content"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="5">
            <Button
                style="@style/SmallGridButton"
                android:id="@+id/play_track_button"
                android:onClick="onPlayTrackButtonClicked"
                android:text="Track" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/play_album_button"
                android:onClick="onPlayAlbumButtonClicked"
                android:text="Album" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/play_artist_button"
                android:onClick="onPlayArtistButtonClicked"
                android:text="Artist" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/play_playlist_button"
                android:onClick="onPlayPlaylistButtonClicked"
                android:text="Playlist" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/play_alarm_button"
                android:onClick="onPlayAlarmButtonClicked"
                android:text="Alarm" />
        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Transport Controls"/>
        <GridLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:columnCount="4">
            <Button
                style="@style/SmallGridButton"
                android:id="@+id/skip_prev_button"
                android:onClick="onSkipPreviousButtonClicked"
                android:text="@string/skip_previous" />
            <Button
                style="@style/SmallGridButton"
                android:id="@+id/resume_button"
                android:onClick="onResumeButtonClicked"
                android:text="@string/resume" />
            <Button
                style="@style/SmallGridButton"
                android:id="@+id/pause_button"
                android:onClick="onPauseButtonClicked"
                android:text="@string/pause" />
            <Button
                style="@style/SmallGridButton"
                android:id="@+id/skip_next_button"
                android:onClick="onSkipNextButtonClicked"
                android:text="@string/skip_next" />
        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Miscellaneous"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3">
            <Button
                style="@style/SmallGridButton"
                android:id="@+id/subscribe_to_player_state"
                android:onClick="onSubscribedToCurrentTrackButtonClicked"
                android:text="Subscribe to Player State" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/subscribe_to_player_context"
                android:onClick="onSubscribedToPlayerContextButtonClicked"
                android:text="@string/subscribe_to_player_context" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/show_player_state_button"
                android:onClick="onShowPlayerStateButtonClicked"
                android:text="@string/show_player_state" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/shuffle_button"
                android:onClick="onShuffleButtonClicked"
                android:text="@string/set_shuffle" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/repeat_button"
                android:onClick="onRepeatButtonClicked"
                android:text="@string/set_repeat" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/subscribe_to_capabilities"
                android:onClick="onSubscribeToCapabilities"
                android:text="@string/subscribe_to_capabilities" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/get_collection_state"
                android:onClick="onGetCollectionState"
                android:text="@string/get_collection_state" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/remove_uri"
                android:onClick="onRemoveUri"
                android:text="@string/remove_uri" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/save_uri"
                android:onClick="onSaveUri"
                android:text="@string/save_uri" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/get_fitness_child"
                android:onClick="onGetFitnessChild"
                android:text="@string/subscribe_to_current_track" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/connect_switch_to_local"
                android:onClick="onConnectSwitchToLocal"
                android:text="@string/connect_switch_to_local" />

            <Button
                style="@style/SmallGridButton"
                android:id="@+id/echo"
                android:onClick="onEcho"
                android:text="@string/echo" />
        </GridLayout>


        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:maxWidth="200dp"
            android:minHeight="20dp"
            android:minWidth="20dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/seek_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/seek_to"
            android:imeOptions="actionDone"
            android:inputType="numberSigned" />

        <SeekBar
            android:id="@+id/seek_to"
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Capabilities"/>
        <TextView
            android:id="@+id/capabilities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeee" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Current Context"/>
        <TextView
            android:id="@+id/current_context"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeee" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Current Track"/>
        <TextView
            android:id="@+id/current_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeee" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Errors"/>
        <TextView
            android:id="@+id/recent_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeee" />
    </LinearLayout>
</ScrollView>
